--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,25 @@ img {
   justify-content: center;
   background-color: white;
   border-radius: 5px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.burger-wrap:hover {
+  background-color: #f59292;
 }
 
 .header-list {
   display: none;
+}
+
+.header-item {
+  color: #fff;
+  transition: 1s;
+}
+
+.header-item:hover {
+  color: #f59292;
 }
 
 .btn-wrap {
@@ -83,9 +98,31 @@ img {
   font-size: 18px;
   line-height: 20px;
   color: white;
-  background-color: red;
+  background-color: rgb(232, 0, 0);
   border: none;
   border-radius: 4px;
+  transition: 1s;
+}
+
+.header-btn:hover,
+.header-btn:focus {
+  background-color: rgb(122, 22, 22);
+}
+
+.scroll-up {
+  position: fixed;
+  right: 0px;
+  bottom: 0px;
+  transform: translateX(100%);
+  z-index: 2;
+  transition: 1s;
+  cursor: pointer;
+}
+
+.active-up {
+  right: 20px;
+  bottom: 10px;
+  transform: translateX(0);
 }
 
 .main {
@@ -148,19 +185,31 @@ img {
   cursor: pointer;
   font-size: 18px;
   line-height: 20px;
+  font-weight: bold;
   color: white;
-  background-color: red;
+  background-color: rgb(232, 0, 0);
   border: none;
   border-radius: 4px;
   padding: 20px 0;
   display: block;
   margin: 0 auto;
+  transition: 1s;
+}
+
+.img-btn:hover,
+.img-btn:focus {
+  background-color: rgb(122, 22, 22);
 }
 
 .nav-title {
   padding-bottom: 10px;
   cursor: pointer;
   position: relative;
+  transition: 1s;
+}
+
+.nav-title:hover {
+  color: #f59292;
 }
 
 .nav-list-wrap::before {
@@ -197,6 +246,10 @@ img {
   font-size: 18px;
   line-height: 20px;
   margin-bottom: 16px;
+}
+
+.nav-item:hover {
+  color: #f59292;
 }
 
 /* section 2 */
@@ -242,6 +295,10 @@ img {
   padding: 10px;
 }
 
+.item-item {
+  padding-left: 30px;
+}
+
 /* section 4 */
 
 .title-four {
@@ -275,6 +332,11 @@ img {
   border-radius: 5px;
   padding: 10px;
   position: relative;
+  transition: 1s;
+}
+
+.question:hover {
+  color: #f59292;
 }
 
 .question::after {
@@ -294,4 +356,150 @@ img {
   overflow: hidden;
   margin-bottom: 20px;
   transition: 1s;
+}
+
+.footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.footer-list {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.footer-img {
+  transition: 1s;
+}
+
+.footer-img:hover {
+  transform: scale(1.1);
+}
+
+.footer-item {
+  width: calc((100% - 25px * 3) / 4);
+}
+
+.copyright {
+  text-align: center;
+  color: beige;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  border-radius: 4px;
+  width: 288px;
+  min-height: 223px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #b81f1f;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn {
+  border-radius: 100%;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  cursor: pointer;
+  margin-bottom: 24px;
+  background-color: #000000;
+  color: #fff;
+  border: 1px solid rgba(52, 40, 40, 0.1);
+  transition: 0.5s;
+}
+
+.close-btn:hover {
+  background-color: #2a2525;
+}
+
+.modal-item {
+  margin-bottom: 30px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.modal-item:hover::before {
+  color: #000000;
+}
+
+.modal-item::before {
+  content: "> ";
+  transition: 1s;
+}
+
+@media screen and (min-width: 900px) {
+  body {
+    font-size: 20px;
+    line-height: 29px;
+  }
+  .header {
+    padding: 0 20px;
+  }
+  .header-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header-nav {
+    align-items: center;
+    justify-content: start;
+  }
+
+  .header-list {
+    display: flex;
+    gap: 25px;
+  }
+  .burger-wrap {
+    display: none;
+  }
+  .header-logo {
+    margin-right: 100px;
+  }
+  .btn-wrap {
+    margin-top: 15px;
+  }
+  .main-wrap {
+    min-height: 450px;
+  }
+  .img-paragraph {
+    padding: 200px 0 20px 0;
+  }
+  .img-btn {
+    font-size: 25px;
+    line-height: 30px;
+  }
 }
